syntax = "proto3";

package SchemaRegistry;

message ProtobufLogMessage {
    string Message = 1;
    int32 Code = 2;
}
